# Hotels-AI-Agent

./: .env.example  .gitignore  Dockerfile  README.md  hotels_report.md  pyproject.toml  railway.json  report.md  requirements.txt  reservations_report.md
assests/: create hotel database schema.sql  generate_project_structure.py  insert data into hotels database schema.sql
docs/: api_documentation.md  architecture.md  user_manual.md
migrations/: alembic.ini
scripts/: deploy.sh  start.sh
src/ai_agent/: crew.py  main.py
src/ai_agent/config/: agents.yaml  tasks.yaml
src/ai_agent/tools/: database_query_tool.py
src/website/: app.py
src/website/models/: database.py  guest.py  hotel.py  payment.py  reservation.py  room.py  room_service.py  service.py  staff.py
src/website/routes/: admin_routes.py  api_routes.py  main_routes.py
src/website/static/: styles.css
src/website/static/js/: scripts.js
src/website/templates/: base.html  hotel_details.html  index.html  reservations.html  room_details.html
src/website/templates/admin/: dashboard.html
tests/: test_models.py  test_routes.py
