[project]
name = "ai_agent"
version = "0.1.0"
description = "ai_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
ai_agent = "ai_agent.main:run"
run_crew = "ai_agent.main:run"
train = "ai_agent.main:train"
replay = "ai_agent.main:replay"
test = "ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
